--- a/Computer Related Info.html
+++ b/Computer Related Info.html
@@ -7,12 +7,12 @@
     </head>
 
     <body text="Black" bgcolor="#C0C0C0">
-        <h1> <strong>  first of all we learn What is Computer.</strong> </h1>
-        <h2> What is Computer ? </h2>
-        <p> A computer is an electronic machine that can store and deal with large amounts pf informations.</p>
-        <h3> Now we will understand how computer works.</h3>
+        <h1 style="color:rgb(185, 22, 22);Font-size:20px;"> <strong> <em>We need to learn about Computer.</em></strong> </h1>
+        <h2 style="Font-size:20px;"> What is Computer ? </h2>
+        <p> A computer is an electronic machine that can store and deal with large amounts of informations.</p>
+        <h3 style="font-size:20px;"> Now we will understand how computer works.</h3>
         <p> Basically a computer works on IPO cycle. In Which <br> I = Input, <br> P = Processing, <br> O = Output. <br> A computer working depends on many things. like CPU, Hard Disk, Motherboard, PSU, Keyboard, Mouse and Monitor. </p>
-        <h4> What is CPU ? </h4>
+        <h4 style="font-size:20px;"> What is CPU ? </h4>
         <p> CPU is a Hardware unit. which full form is Central Processing Unit. it only unction is Processing the input.</p>
             
          
