--- a/Computer Related Info.html
+++ b/Computer Related Info.html
@@ -7,11 +7,13 @@
     </head>
 
     <body text="Black" bgcolor="#C0C0C0">
-        <h1 style="color:rgb(185, 22, 22);Font-size:20px;"> <strong> <em>We need to learn about Computer.</em></strong> </h1>
+        <h1 style="color:rgb(185, 22, 22);Font-size:20px;text-align: center;"> <strong> <em>We need to learn about <a href="https://en.wikipedia.org/wiki/Computer"> Computer.</a></em></strong> </h1>
         <h2 style="Font-size:20px;"> What is Computer ? </h2>
         <p> A computer is an electronic machine that can store and deal with large amounts of informations.</p>
         <h3 style="font-size:20px;"> Now we will understand how computer works.</h3>
-        <p> Basically a computer works on IPO cycle. In Which <br> I = Input, <br> P = Processing, <br> O = Output. <br> A computer working depends on many things. like CPU, Hard Disk, Motherboard, PSU, Keyboard, Mouse and Monitor. </p>
+        <p> Basically a computer works on IPO cycle. In Which <br> I = Input, <br> P = Processing, <br> O = Output. <br> A computer working depends on many things. like <a href="https://vlebazaar.in/index.php?route=product/product&product_id=17262"</a>CPU, <a href="https://www.tradeinn.com/f/13864/138642567/toshiba-mg-series-6tb-7200rpm-hard-disk-drive.jpg"</a>Hard Disk, 
+            <a href="https://en.wikipedia.org/wiki/Power_supply_unit_(computer)"</a>PSU, Mouse and Monitor.</p>
+        
         <h4 style="font-size:20px;"> What is CPU ? </h4>
         <p> CPU is a Hardware unit. which full form is Central Processing Unit. it only unction is Processing the input.</p>
             
